@@ -1,6 +1,8 @@
 ===============================================================================
                                Changes in 4.2
 ===============================================================================
+# CH4 shm is enabled by default with ucx netmod.
+
 # Use --with-{pmi,pmi2,pmix]=[path] to configure external PMI library.
   Convenience options for Slurm and cray deprecated. Use --with-pmi=oldcray
   for older Cray environment.
